--- a/conversion-main/package.json
+++ b/conversion-main/package.json
@@ -1,6 +1,7 @@
 {
   "name": "conversion-main",
   "version": "0.1.0",
+  "homepage":"Converter",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "react-router-dom": "^6.14.2",
     "tailwindcss": "^3.3.2"
   }
 }
